tests: adição de teste para o algoritmo de auto disconnect de estudantes [success]: - marca o estudante como distante sem dados de histórico no redis - realiza a desconexão automática por tempo de afastamento excedido - mantém o estado de distância do aluno quando o tempo de afastamento não for excedido - limpa o redis quando o estudante retornar ao parímetro válido
[failure]:
- lança exception quando a viagem não estiver em andamento
- retorna silenciosamente e sobe logging quando não há estudantes elegíveis para a validação
- retorna de forma silenciosa e sobe logging se o estudante estiver com status "left" ou "auto_disconnected".
- lança exception caso não encontre a viagem atual para lançar a notificação para o aluno auto disvinculado.